force-app/main/default/objects/Contact/fields/AC_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>AC_Created_Date__c</fullName>
    <label>AC Created Date</label>
    <type>DateTime</type>
</CustomField>