force-app/main/default/objects/Contact/fields/AC_Created_User__c.field-meta.xml
<CustomField>
    <fullName>AC_Created_User__c</fullName>
    <label>AC Created User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>