force-app/main/default/objects/Contact/fields/AC_Login__c.field-meta.xml
<CustomField>
    <fullName>AC_Login__c</fullName>
    <label>AC Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>