force-app/main/default/objects/Contact/fields/AC_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>AC_Modified_Date__c</fullName>
    <label>AC Modified Date</label>
    <type>DateTime</type>
</CustomField>