force-app/main/default/objects/Contact/fields/AC_Modified_User__c.field-meta.xml
<CustomField>
    <fullName>AC_Modified_User__c</fullName>
    <label>AC Modified User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>