force-app/main/default/objects/Contact/fields/AC_Payment_Disabled__c.field-meta.xml
<CustomField>
    <fullName>AC_Payment_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AC Payment Disabled</label>
    <type>Checkbox</type>
</CustomField>