force-app/main/default/objects/Contact/fields/AC_User_ID__c.field-meta.xml
<CustomField>
    <fullName>AC_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>AC User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>