force-app/main/default/objects/Contact/fields/Account_API_Buyer_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_API_Buyer_Id__c</fullName>
    <formula>Account.API_Buyer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account API Buyer Id</label>
    <type>Text</type>
</CustomField>