force-app/main/default/objects/Contact/fields/Account_Branch__c.field-meta.xml
<CustomField>
    <fullName>Account_Branch__c</fullName>
    <formula>Account.Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Branch</label>
    <type>Text</type>
</CustomField>