force-app/main/default/objects/Contact/fields/Account_Buyer_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Buyer_Status__c</fullName>
    <formula>TEXT(Account.Buyer_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Buyer Status</label>
    <type>Text</type>
</CustomField>