force-app/main/default/objects/Contact/fields/Account_Last_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Sold_Date__c</fullName>
    <formula>Account.Last_Sold_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Last Sold Date</label>
    <type>Date</type>
</CustomField>