force-app/main/default/objects/Contact/fields/AccountBuyerRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>AccountBuyerRenewalDate__c</fullName>
    <label>AccountBuyerRenewalDate</label>
    <type>Date</type>
</CustomField>