force-app/main/default/objects/Contact/fields/AccountBuyerStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountBuyerStatus__c</fullName>
    <inlineHelpText>Updated By BI each hour.</inlineHelpText>
    <label>Buyer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>