force-app/main/default/objects/Contact/fields/Address_Varies_from_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_Varies_from_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Varies from ID</label>
    <type>Checkbox</type>
</CustomField>