force-app/main/default/objects/Contact/fields/Age_sex__c.field-meta.xml
<CustomField>
    <fullName>Age_sex__c</fullName>
    <inlineHelpText>Age/Sex of Contact</inlineHelpText>
    <label>Age / sex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>