force-app/main/default/objects/Contact/fields/Amount_of_Credit_Available__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Credit_Available__c</fullName>
    <inlineHelpText>Utilization of available credit</inlineHelpText>
    <label>Amount of Credit Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-100k</fullName>
            </value>
            <value>
                <fullName>100-250k</fullName>
            </value>
            <value>
                <fullName>250-500k</fullName>
            </value>
            <value>
                <fullName>500k+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>