force-app/main/default/objects/Contact/fields/Association_Trade_Group_Membership__c.field-meta.xml
<CustomField>
    <fullName>Association_Trade_Group_Membership__c</fullName>
    <inlineHelpText>Association of trade group affiliation</inlineHelpText>
    <label>Association/Trade Group Membership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARA</fullName>
            </value>
            <value>
                <fullName>URG</fullName>
            </value>
            <value>
                <fullName>State Association</fullName>
            </value>
            <value>
                <fullName>Team PRP</fullName>
            </value>
            <value>
                <fullName>NADA</fullName>
            </value>
            <value>
                <fullName>NIADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>