force-app/main/default/objects/Contact/fields/Auction_attendance_frequency__c.field-meta.xml
<CustomField>
    <fullName>Auction_attendance_frequency__c</fullName>
    <inlineHelpText>How often does a buyer attend an auction</inlineHelpText>
    <label>Auction attendance frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>monthly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>