force-app/main/default/objects/Contact/fields/AuctionAccess_ID_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_ID_Expiration_Date__c</fullName>
    <label>AA ID Expiration Date</label>
    <type>Date</type>
</CustomField>