force-app/main/default/objects/Contact/fields/AuctionAccess_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_ID_Number__c</fullName>
    <description>The ID number of Driver License, Passport from AA</description>
    <label>AA ID Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>