force-app/main/default/objects/Contact/fields/AuctionAccess_ID_State_Issued__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_ID_State_Issued__c</fullName>
    <label>AA ID State Issued</label>
    <length>40</length>
    <type>Text</type>
</CustomField>