force-app/main/default/objects/Contact/fields/AuctionAccess_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_ID_Type__c</fullName>
    <label>AA ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Driver’s License</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>State ID</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Passport/Visa</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Consular ID Card</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Border Crossing Card</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Permanent Resident Card (GC)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>