force-app/main/default/objects/Contact/fields/AuctionAccess_Last_4_Government_Id__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Last_4_Government_Id__c</fullName>
    <label>AuctionAccess Last 4 Government Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>