force-app/main/default/objects/Contact/fields/AuctionAccess_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Membership_Number__c</fullName>
    <label>AuctionAccess Membership Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>