force-app/main/default/objects/Contact/fields/Authorized_Contact__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized Contact</label>
    <type>Checkbox</type>
</CustomField>