force-app/main/default/objects/Contact/fields/AuthUserKey__c.field-meta.xml
<CustomField>
    <fullName>AuthUserKey__c</fullName>
    <label>Auth User Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>