force-app/main/default/objects/Contact/fields/Bid_Activity__c.field-meta.xml
<CustomField>
    <fullName>Bid_Activity__c</fullName>
    <inlineHelpText>How often does this buyer bid</inlineHelpText>
    <label>Bid Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>