force-app/main/default/objects/Contact/fields/Bidder_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Display_Name__c</fullName>
    <label>Bidder Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>