force-app/main/default/objects/Contact/fields/Bidder_Number__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Number__c</fullName>
    <label>Bidder Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>