force-app/main/default/objects/Contact/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch Manager</label>
    <type>Checkbox</type>
</CustomField>