force-app/main/default/objects/Contact/fields/Branches_mainly_purchase_from__c.field-meta.xml
<CustomField>
    <fullName>Branches_mainly_purchase_from__c</fullName>
    <inlineHelpText>What Branch(es) does the contact purchase from the most.</inlineHelpText>
    <label>Branch(es) mainly purchase from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>