force-app/main/default/objects/Contact/fields/BrokerPartnerUserIsActive__c.field-meta.xml
<CustomField>
    <fullName>BrokerPartnerUserIsActive__c</fullName>
    <description>Checking if user is active or not</description>
    <formula>Broker_Partner_User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BrokerPartnerUserIsActive</label>
    <type>Checkbox</type>
</CustomField>