force-app/main/default/objects/Contact/fields/Buyer_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Employee_ID__c</fullName>
    <label>Buyer Employee ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>