force-app/main/default/objects/Contact/fields/Buyer_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Subtype__c</fullName>
    <label>Buyer Subtype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Serve</fullName>
            </value>
            <value>
                <fullName>Self-Serve</fullName>
            </value>
            <value>
                <fullName>Multiple Shop Operator</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Buy Here Pay Here</fullName>
            </value>
            <value>
                <fullName>Lease Here Pay Here</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Preferred Broker</fullName>
            </value>
            <value>
                <fullName>MAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>