force-app/main/default/objects/Contact/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Buyer</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Rebuilder</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Recycler</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>Exporter</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>