force-app/main/default/objects/Contact/fields/City_Owner__c.field-meta.xml
<CustomField>
    <fullName>City_Owner__c</fullName>
    <description>CITY OWNER</description>
    <label>City Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>