force-app/main/default/objects/Contact/fields/Contact_Bio__c.field-meta.xml
<CustomField>
    <fullName>Contact_Bio__c</fullName>
    <label>Contact Bio</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>