force-app/main/default/objects/Contact/fields/Contact_Score__c.field-meta.xml
<CustomField>
    <fullName>Contact_Score__c</fullName>
    <formula>CASE(TEXT(Role_in_Company__c), 
&quot;4-Star-Owner&quot;, 4,
&quot;3-Star-Decision Maker&quot;, 3,
&quot;2-Star-Influencer&quot;, 2,
&quot;1-Star-Gate Keeper&quot;, 1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>