force-app/main/default/objects/Contact/fields/ContactTypeBuyerOrUser__c.field-meta.xml
<CustomField>
    <fullName>ContactTypeBuyerOrUser__c</fullName>
    <label>ContactTypeBuyerOrUser</label>
    <length>10</length>
    <type>Text</type>
</CustomField>