force-app/main/default/objects/Contact/fields/Country_Owner__c.field-meta.xml
<CustomField>
    <fullName>Country_Owner__c</fullName>
    <description>COUNTRY OWNER</description>
    <label>Country Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>