force-app/main/default/objects/Contact/fields/COVID_19_List__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please select this option if you would like your contact to receive COVID communications.</inlineHelpText>
    <label>COVID-19 List</label>
    <type>Checkbox</type>
</CustomField>