force-app/main/default/objects/Contact/fields/CRC_Storage_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>CRC_Storage_Location_ID__c</fullName>
    <label>Storage Location ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>