force-app/main/default/objects/Contact/fields/Current_Status_Effective_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Effective_Date_Time__c</fullName>
    <label>Current Status Effective Date Time</label>
    <type>DateTime</type>
</CustomField>