force-app/main/default/objects/Contact/fields/DaysfromRegistrationtoActive__c.field-meta.xml
<CustomField>
    <fullName>DaysfromRegistrationtoActive__c</fullName>
    <formula>Account.Registration_Setup_Date__c  -  Account.Registration_Effective_Date__c</formula>
    <label>DaysfromRegistrationtoActive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>