force-app/main/default/objects/Contact/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <inlineHelpText>Does this buyer use the mobile app or desktop</inlineHelpText>
    <label>Device Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>