force-app/main/default/objects/Contact/fields/Do_they_use_Brokers__c.field-meta.xml
<CustomField>
    <fullName>Do_they_use_Brokers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they use Brokers?</label>
    <type>Checkbox</type>
</CustomField>