force-app/main/default/objects/Contact/fields/Do_they_use_IAA_Local_Tow__c.field-meta.xml
<CustomField>
    <fullName>Do_they_use_IAA_Local_Tow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they use IAA Local Tow?</label>
    <type>Checkbox</type>
</CustomField>