force-app/main/default/objects/Contact/fields/Do_they_use_IAA_Transport__c.field-meta.xml
<CustomField>
    <fullName>Do_they_use_IAA_Transport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they use IAA Transport?</label>
    <type>Checkbox</type>
</CustomField>