force-app/main/default/objects/Contact/fields/Do_they_use_Inspection_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Do_they_use_Inspection_Vendors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they use Inspection Vendors?</label>
    <type>Checkbox</type>
</CustomField>