force-app/main/default/objects/Contact/fields/Do_they_use_Vehicle_Reports__c.field-meta.xml
<CustomField>
    <fullName>Do_they_use_Vehicle_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they use Vehicle Reports?</label>
    <type>Checkbox</type>
</CustomField>