force-app/main/default/objects/Contact/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>