force-app/main/default/objects/Contact/fields/First_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Date__c</fullName>
    <inlineHelpText>Date of first purchase</inlineHelpText>
    <label>First Purchase Date</label>
    <type>Date</type>
</CustomField>