force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>FirstName+&quot; &quot;+ LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for reports/listviews</inlineHelpText>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>