force-app/main/default/objects/Contact/fields/ID_State_Issued__c.field-meta.xml
<CustomField>
    <fullName>ID_State_Issued__c</fullName>
    <label>ID State Issued</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ID_Country_Issued__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>MX-AGS</fullName>
                <label>AGUASCALIENTES</label>
            </value>
            <value>
                <fullName>US-AL</fullName>
                <label>Alabama</label>
            </value>
            <value>
                <fullName>US-AK</fullName>
                <label>Alaska</label>
            </value>
            <value>
                <fullName>CA-AB</fullName>
                <label>Alberta</label>
            </value>
            <value>
                <fullName>GT-AV</fullName>
                <label>Alta Verapaz</label>
            </value>
            <value>
                <fullName>US-AZ</fullName>
                <label>Arizona</label>
            </value>
            <value>
                <fullName>US-AR</fullName>
                <label>Arkansas</label>
            </value>
            <value>
                <fullName>MX-BCN</fullName>
                <label>BAJA CALIFORNIA</label>
            </value>
            <value>
                <fullName>MX-BCS</fullName>
                <label>BAJA CALIFORNIA SUR</label>
            </value>
            <value>
                <fullName>GT-BV</fullName>
                <label>Baja Verapaz</label>
            </value>
            <value>
                <fullName>CA-BC</fullName>
                <label>British Columbia</label>
            </value>
            <value>
                <fullName>US-CA</fullName>
                <label>California</label>
            </value>
            <value>
                <fullName>MX-CAM</fullName>
                <label>CAMPECHE</label>
            </value>
            <value>
                <fullName>MX-CHP</fullName>
                <label>CHIAPAS</label>
            </value>
            <value>
                <fullName>MX-CHH</fullName>
                <label>CHIHUAHUA</label>
            </value>
            <value>
                <fullName>GT-CO</fullName>
                <label>Chimaltenango</label>
            </value>
            <value>
                <fullName>GT-CA</fullName>
                <label>Chiquimula</label>
            </value>
            <value>
                <fullName>MX-COA</fullName>
                <label>COAHUILA</label>
            </value>
            <value>
                <fullName>MX-COL</fullName>
                <label>COLIMA</label>
            </value>
            <value>
                <fullName>US-CO</fullName>
                <label>Colorado</label>
            </value>
            <value>
                <fullName>US-CT</fullName>
                <label>Connecticut</label>
            </value>
            <value>
                <fullName>US-DE</fullName>
                <label>Delaware</label>
            </value>
            <value>
                <fullName>US-DC</fullName>
                <label>District Of Columbia</label>
            </value>
            <value>
                <fullName>MX-DIF</fullName>
                <label>DISTRITO FEDERAL</label>
            </value>
            <value>
                <fullName>MX-DUR</fullName>
                <label>DURANGO</label>
            </value>
            <value>
                <fullName>GT-EP</fullName>
                <label>El Progreso</label>
            </value>
            <value>
                <fullName>GT-ES</fullName>
                <label>Escuintla</label>
            </value>
            <value>
                <fullName>US-FL</fullName>
                <label>Florida</label>
            </value>
            <value>
                <fullName>US-GA</fullName>
                <label>Georgia</label>
            </value>
            <value>
                <fullName>GU-GU</fullName>
                <label>Guam</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>