force-app/main/default/objects/Contact/fields/Individual_Date_Ran__c.field-meta.xml
<CustomField>
    <fullName>Individual_Date_Ran__c</fullName>
    <label>Individual Date Ran</label>
    <type>DateTime</type>
</CustomField>